--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,9 @@ target 'PetProject' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'PetProjectTests' do
     inherit! :complete
     # Pods for testing
