--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 buildscript {
     ext {
-        buildToolsVersion = "31.0.0"
+        buildToolsVersion = "31.0.2"
         minSdkVersion = 21
         compileSdkVersion = 31
         targetSdkVersion = 31
@@ -39,6 +39,9 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        maven {
+            url("$rootDir/../node_modules/@notifee/react-native/android/libs")
         }
         mavenCentral {
             // We don't want to fetch react-native from Maven Central as there are
