--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@notifee/react-native": "^5.4.1",
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.3.1",
